crud operations for books